<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity" />
    
    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/yellow_transparent"
        map:singleSelection="true"
        map:checkedButton="@id/btnNormal"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="112dp">

        <Button
            android:id="@+id/btnNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:text="@string/btn_normal"
            android:textColor="@color/white"
            android:textAppearance="?attr/textAppearanceCaption"
            style="?attr/materialButtonOutlinedStyle"/>

        <Button
            android:id="@+id/btnHybrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:text="@string/btn_hybrid"
            android:textColor="@color/white"
            android:textAppearance="?attr/textAppearanceCaption"
            style="?attr/materialButtonOutlinedStyle"/>

        <Button
            android:id="@+id/btnSatellite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:text="@string/btn_satellite"
            android:textColor="@color/white"
            android:textAppearance="?attr/textAppearanceCaption"
            style="?attr/materialButtonOutlinedStyle"/>

        <Button
            android:id="@+id/btnTerrain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:text="@string/btn_terrain"
            android:textColor="@color/white"
            android:textAppearance="?attr/textAppearanceCaption"
            style="?attr/materialButtonOutlinedStyle"/>

        <Button
            android:id="@+id/btnNone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:text="@string/btn_none"
            android:textColor="@color/white"
            android:textAppearance="?attr/textAppearanceCaption"
            style="?attr/materialButtonOutlinedStyle"/>


    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="200dp"
        android:clickable="true"
        android:contentDescription="@string/btn_location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_mylocation" />

</androidx.constraintlayout.widget.ConstraintLayout>
